# SoCks

./: README.md  pyproject.toml
tool/: README.md  amd_builder.py  atfbuilder.py  atfbuildertester.py  builder.py  cfg_compiler.py  configuration_compiler.py  main.py  pretty_print.py  project-def.yml  project-zynqmp-def.yml  pyproject.toml  run_sh_command.py  socks.py  zynqmp.schema.json  zynqmp_alma_rootfs_builder_alma8.py  zynqmp_amd_alma_rootfs_builder_alma8.py  zynqmp_amd_alma_rootfs_builder_alma9.py  zynqmp_amd_atf_builder_alma9.py  zynqmp_amd_devicetree_builder_alma9.py  zynqmp_amd_fsbl_builder_alma9.py  zynqmp_amd_hog_vivado_builder_alma9.py  zynqmp_amd_image_builder_alma9.py  zynqmp_amd_kernel_builder_alma9.py  zynqmp_amd_pmufw_builder_alma9.py  zynqmp_amd_uboot_builder_alma9.py  zynqmp_amd_vivado_hog_builder_alma9.py
tool/builders/: zynqmp_alma_rootfs_builder_alma8.py  zynqmp_amd_atf_builder_alma9.py  zynqmp_amd_devicetree_builder_alma9.py  zynqmp_amd_fsbl_builder_alma9.py  zynqmp_amd_image_builder_alma9.py  zynqmp_amd_kernel_builder_alma9.py  zynqmp_amd_petalinux_rootfs_builder_alma8.py  zynqmp_amd_pmufw_builder_alma9.py  zynqmp_amd_uboot_builder_alma9.py  zynqmp_amd_vivado_hog_builder_alma9.py  zynqmp_amd_vivado_ipbb_builder_alma9.py
tool/container/: all-in-one-builder-alma8:xilinx-v2022.2.containerfile  alma8-rootfs-builder-alma8:v1.0.containerfile  amd-xilinx-tools-alma9:xilinx-v2022.2.containerfile  atf-builder-alma8:xilinx-v2022.2.containerfile  image-builder-alma9:xilinx-v2022.2.containerfile  kernel-builder-alma8:xilinx-v2022.2.containerfile  kernel-builder-alma9:xilinx-v2022.2.containerfile  petalinux-rootfs-builder-alma8:xilinx-v2022.2.containerfile  u-boot-builder-alma8:xilinx-v2022.2.containerfile
tool/project_templates/: project-zynqmp-default.yml
tool/schemas/: zynqmp.schema.json  zynqmp_amd_devicetree_builder_alma9.schema.json  zynqmp_amd_kernel_builder_alma9.schema.json  zynqmp_amd_pmufw_builder_alma9.schema.json  zynqmp_amd_uboot_builder_alma9.schema.json  zynqmp_amd_vivado_hog_builder_alma9.schema.json  zynqmp_amd_vivado_ipbb_builder_alma9.schema.json
tool/socks/: amd_builder.py  builder.py  configuration_compiler.py  main.py
tool/src/abstract_builders/: aarch64_rootfs_builder.py  aarch64_rootfs_model.py  amd_builder.py  block_model.py  builder.py  file_system_builder.py  file_system_model.py
tool/src/amd_versal_builders/: versal_almalinux_rootfs_builder.py  versal_almalinux_rootfs_model.py  versal_amd_atf_builder.py  versal_amd_atf_model.py  versal_amd_devicetree_builder.py  versal_amd_devicetree_model.py  versal_amd_image_builder.py  versal_amd_image_model.py  (+10 more)
(+493 files in other folders)
