[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.1"
name = "socks"
authors = [
    { name = "Marvin Fuchs", email = "marvin.fuchs@kit.edu" },
]
description = "A tool to build images for SoC devices."
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">= 3.10"
dependencies = [
    "pyyaml>=5.4.1",
    "python-dateutil>=2.8.1",
    "requests>=2.25.1",
    "validators>=0.33.0",
    "tqdm>=4.57.0",
    "argcomplete>=3.5.0",
    "pydantic>=2.9.2"
]

[tool.setuptools.package-data]
socks = ["container/*.containerfile", "templates/**/*"]
builders = ["templates/**/*"]

[tool.black]
line-length = 120

[project.scripts]
socks = "socks.main:main"
